-Made it so that the paragraph text in the biography modals clear the picutre once the screen gets small enough, to prevent breaks in the text. -Made it so that the donate button in the support modal floats left at suitably small screen sizes. -Modified the logo images section so that it is better centered even for small screen widths. -Modified the navigation header so that the amount of room it takes up is minimized when the screen gets smaller, but made sure the logo maintains its position WITHIN the white background. -Added a fixed height to the slide section, to prevent the about us section collapsing into it when the scren height shrinks.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6318,7 +6318,7 @@ ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li
 /* === CAROUSEL SLIDES === */
 #header{
 	position: relative;
-	height: 100%;
+	height: 680px;
 }
 
 /* For the "more info" links in the carousel slides */
@@ -6343,6 +6343,7 @@ ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li
 	background-position: center center;
 	min-height: 650px;
 	width: 100%;
+	height: 100%;
 	-webkit-background-size: 100%;
 	-moz-background-size: 100%;
 	-o-background-size: 100%;
@@ -6369,7 +6370,7 @@ ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li
 }
 
 #left-nav, #right-nav{
-	margin-top: 250px;
+	margin-top: 300px;
 	display: inline;
 }
 
@@ -6583,7 +6584,7 @@ form div p{
 #footerwrap .row img{
     height: 100px;
 	width: 100px;
-	margin: 10px auto;
+	margin-left: 50px;
 }
 
 #footerwrap .col-md-6{
@@ -6621,8 +6622,8 @@ body .header {
 }
 }
 
-/* The rest of the queries address various layout issues that occur as the screen width gets smaller.*/
-@media screen and (max-width:992px) {
+/* /* The rest of the queries address various layout issues that occur as the screen width gets smaller.*/
+@media screen and (max-width:991px) {
 	#support-btn{
 		margin-bottom: 40px;
 	}
@@ -6630,9 +6631,15 @@ body .header {
 	#team .btn{
 		margin-bottom: 7.5%;
 	}	
+	
+	#footerwrap .row img{
+		margin-top: 20px;
+		margin-left: 0px;
+	}
 }
 
-@media screen and (max-width:769px) {
+
+@media screen and (max-width:767px) {
 
 	#headerwrap h1 {
 		font-size: 80px;
@@ -6646,10 +6653,6 @@ body .header {
 		position: static;
 	}
 
-	.navbar-inverse{
-		height: 145px;
-	}
-
 	.navbar-inverse .navbar-nav > li > a{
 		color: black;
 	}
@@ -6657,29 +6660,54 @@ body .header {
 	.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
     color: #778899;
     background-color: transparent;
+	}
+	
+	.in, .collapsing{
+		margin-top: 45px;
+	}
 }
 
-	.in, .collapsing{
-		margin-top: 50px;
+@media screen and (max-width:650px){
+	
+	#footerwrap .col-md-6{
+		position: relative;
+		right: 2.5%;
+	}
+}
+
+@media screen and (max-width:450px){
+	
+	#footerwrap .col-md-6{
+		position: relative;
+		right: 8.5%;
+	}
+}
+
+@media screen and (max-width:411px) {
+	.modal-body p{
+		clear: left;
+		position: relative;
+		top: 5px;
+	}
+	
+	.modal input{
+		float: left;
 	}
 }
 
 @media screen and (max-width:328px) {
+
 	.in, .collapsing{
-		margin-top: 65px;
+		margin-top: 7px;
+	}
+
+	
+	.navbar-inverse{
+		height: 85px;
+	}
+	
+	.navbar-brand img{
+		position: relative;
+		bottom: 65px;
 	}
 }
-
-@media screen and (max-width:300px) {
-	#footerwrap .row img{
-		position: relative;
-		right: 10px;
-	}
-}
-
-@media screen and (max-width:400px) {
-	#footerwrap .row img{
-		position: relative;
-		right: 3.5px;
-	}
-} 
